# WangDaoDataStruct2023

./: README.md
seqlist/seqlists/: CMakeLists.txt  a.out  demo1.c
seqlist/seqlists/package/: myseqlist.c  myseqlist.h
seqlist/seqlists/questions/: 2-01.c  2-02.c  2-03.c  2-04.c  2-05.c  2-06.c  2-07.c  CMakeLists.txt
